# mod-prediction-framework

./: .gitignore  README.md  default_config.ini  poetry.lock.tmp  pyproject.toml
data/example/: events.csv  historic_demand_munich_example.csv
demandprediction/: main.py
demandprediction/prediction/generators/: border_generator.py  border_generator_multi_step.py  citywide_generator.py  conv_lstm_add_info.py  conv_lstm_events_conv2d_generator.py  lstm_border_generator.py  lstm_border_generator_multi_step.py
demandprediction/prediction/layers/: hadamard.py
demandprediction/prediction/model/: __init__.py  base_model.py  border_model.py  border_model_multistep.py  citywide_model.py  conv_lstm_base_model.py  conv_lstm_events_conv2d.py  conv_lstm_model.py  full_lstm_border_model.py  full_lstm_border_model_multi_step.py  ha_model.py  persistence_model.py  sarimax.py  sarimax_border_model.py
demandprediction/prediction/postprocessing/: error_measures.py  postprocessing.py
demandprediction/prediction/preprocessing/: constants.py  preprocessing.py
demandprediction/utils/: grid.py  lazy_loader.py  plot_utils.py  shared_filenames.py  test_gird.py  utils.py
